--- a/package.json
+++ b/package.json
@@ -9,19 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "@types/leaflet": "^1.9.16",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/moment": "^2.13.0",
+    "@types/react-map-gl": "^6.1.7",
+    "classnames": "^2.5.1",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.9.4",
+    "moment": "^2.30.1",
+    "next": "15.1.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^7.1.9",
+    "react-slick": "^0.30.3",
+    "sass": "^1.83.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-slick": "^0.23.13",
+    "@types/react-sortable-hoc": "^0.7.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
