--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mapbox-gl": "^3.9.4",
     "moment": "^2.30.1",
     "next": "15.1.0",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^19.0.0",
@@ -35,7 +36,8 @@
     "react-slick": "^0.30.3",
     "sass": "^1.83.4",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.2"
+    "swiper": "^11.2.2",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -43,6 +45,7 @@
     "@types/react": "^19",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-slick": "^0.23.13",
     "@types/react-sortable-hoc": "^0.7.1",
     "eslint": "^9",
