--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^7.1.9",
     "react-slick": "^0.30.3",
+    "react-to-print": "^3.0.5",
     "sass": "^1.83.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
