--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/moment": "^2.13.0",
     "@types/react-map-gl": "^6.1.7",
     "classnames": "^2.5.1",
+    "jsbarcode": "^3.11.6",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.9.4",
     "moment": "^2.30.1",
@@ -33,6 +34,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^7.1.9",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.5",
     "sass": "^1.83.4",
