--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@mui/x-charts": "^7.27.1",
     "@mui/x-date-pickers": "^7.27.1",
     "@types/leaflet": "^1.9.16",
     "@types/mapbox-gl": "^3.4.1",
