--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mapbox-gl": "^3.9.4",
     "moment": "^2.30.1",
     "next": "15.1.0",
+    "qrcode.react": "^4.2.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.0.0",
