--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
@@ -44,7 +45,8 @@
     "sass": "^1.83.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
