--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@mui/x-charts": "^7.27.1",
@@ -36,6 +37,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^7.1.9",
@@ -46,7 +48,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
