working on dashboard

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/mapbox-gl": "^3.4.1",
     "@types/moment": "^2.13.0",
     "@types/react-map-gl": "^6.1.7",
+    "@types/recharts": "^1.8.29",
+    "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "jsbarcode": "^3.11.6",
     "leaflet": "^1.9.4",
@@ -44,6 +46,7 @@
     "react-qr-barcode-scanner": "^2.0.0",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.5",
+    "recharts": "^2.15.1",
     "sass": "^1.83.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/classnames": "^2.3.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-beautiful-dnd": "^13.1.8",
